add HttpUtil package. Modify ClientEventControl(还没搞定).